# hakuna-matata

./: .env  .gitignore  404.html  Dockerfile  Kaas.xlsm  index.html  kaas.env  mkdocs.yml  pyproject.toml  rbac_system.db  readme.md  requirements.txt  session_name.session  threads_db.db  worker.sh
.github/workflows/: ci.yml
DhoomStudiosDoc/Debt_Reference/: index.html
DhoomStudiosDoc/Debt_Reviewed/: index.html
DhoomStudiosDoc/JioRouterConfig/: index.html
DhoomStudiosDoc/OldMansTale/: index.html
HakunaMatataDoc/AgentCreationGuideline/: index.html
HakunaMatataDoc/HakunaMatataDevGuide/: index.html
HakunaMatataDoc/RbacGuidelines/: index.html
SerendipityDoc/AccQTPrd/: index.html
SerendipityDoc/AccountDailyReport/: index.html
SerendipityDoc/AudioMeetingGuidelines/: index.html
SerendipityDoc/FileNamingGuidelines/: index.html
SerendipityDoc/KaasMainSheetSummary/: index.html
SerendipityDoc/Kaas_Sheets_Summary/: index.html
SerendipityDoc/ScriptGuide/: index.html
SerendipityDoc/prompt_collections/: index.html
TradeManDoc/Begin_Phase1/: index.html
TradeManDoc/FabricKaas/: index.html
TradeManDoc/HakunaMatataDevGuide/: index.html
backend/: kaas.env  session_name.session  threads_db.db
docs/: AgentCreationGuideline.md  HakunaMatataDevGuide.md  developmentSch.MD  index.md
frontend/: README.md  package-lock.json  package.json
search/: search_index.json
server/: __init__.py  api_router.py  main.py  settings.py
src/: agents.py  agents_schema.py  constants.py  routes.py  views.py
startup_control/: start_docker.sh  stop_docker.sh
(+40 files in other folders)
